--- a/src/app/modules/components/registro-formulario/registro-formulario.component.html
+++ b/src/app/modules/components/registro-formulario/registro-formulario.component.html
@@ -13,6 +13,7 @@
               id="nombreMascota"
               [(ngModel)]="nombreMascota"
               name="nombreMascota"
+              (input)="actualizarIngresos()"
               required>
           </div>
           <div class="col-md-4">
