--- a/src/app/modules/components/empleados-formulario/empleados-formulario.component.scss
+++ b/src/app/modules/components/empleados-formulario/empleados-formulario.component.scss
@@ -92,7 +92,7 @@
             }
 
             .nomina-pendiente {
-              color: #dc3545;
+              color: #28a745;
               font-weight: bold;
               font-size: 0.8em;
             }
